deploy/k8s/02-wallet-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-api
  namespace: wallet-demo
spec:
  replicas: 3
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 120
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: wallet-api
  template:
    metadata:
      labels:
        app: wallet-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: wallet-api
          image: wallet-api:dev
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 50051
            - name: metrics
              containerPort: 9090
          env:
            - name: STORAGE
              value: redis
            - name: REDIS_ADDR
              value: redis.wallet-demo.svc.cluster.local:6379
            - name: HTTP_PORT
              value: "8080"
            - name: GRPC_PORT
              value: "50051"
            - name: METRICS_PORT
              value: "9090"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 150m
              memory: 128Mi
            limits:
              cpu: 600m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-api
  namespace: wallet-demo
spec:
  selector:
    app: wallet-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-api-headless
  namespace: wallet-demo
spec:
  clusterIP: None
  selector:
    app: wallet-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: metrics
      port: 9090
      targetPort: 9090
